Fix text alignment in body for consistent layout

--- a/CSS/fontStyle.css
+++ b/CSS/fontStyle.css
@@ -1,11 +1,12 @@
 body {
     font-family: 'Times', serif;
     font-size: 16px;
-    /* text-align: center; */
+    text-align: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-self: flex-start;
+    width: fit-content;
 }
 
 article h1 {
